--- a/Pipfile
+++ b/Pipfile
@@ -7,7 +7,8 @@ name = "pypi"
 flask = "*"
 requests = "*"
 gunicorn = "*"
-trmnlp = {git = "https://github.com/usetrmnl/trmnlp.git"}
+flask-limiter = "*"
+flask-caching = "*"
 
 [dev-packages]
 
