Create Dockerfile, extract repeatable components to shared.liquid

--- a/src/settings.yml
+++ b/src/settings.yml
@@ -9,7 +9,7 @@ no_screen_padding: 'no'
 dark_mode: 'no'
 static_data: ''
 polling_verb: get
-polling_url: ''
+polling_url: 'http://trmnl-plugin:3000/api'
 polling_headers: ''
 name: Frank Energie Plugin
 refresh_interval: 1440
