--- a/.gitignore
+++ b/.gitignore
@@ -205,3 +205,12 @@ cython_debug/
 marimo/_static/
 marimo/_lsp/
 __marimo__/
+
+# node_modules
+node_modules/
+# Local Netlify folder
+.netlify
+# Deno
+deno.lock
+# trmnlp
+bin/trmnlp
