--- a/.trmnlp.yml
+++ b/.trmnlp.yml
@@ -1,14 +1,17 @@
 # TRMNLP configuration
 ---
+# auto-reload when files change
 watch:
-  - .trmnlp.yml
   - src
+  - .trmnlp.yml
 
-# This is the "proper" place. 
-# It works as {{resource_type}} in settings.yml 
+# values of custom fields
+# This is the "proper" place.
+# It works as {{resource_type}} in settings.yml
 # AND maps to trmnl.plugin_settings.custom_fields_values.resource_type in Liquid.
 custom_fields:
   resource_type: "Electricity"
 
+# override variables for development
 variables:
   trmnl: {}
