Update default author bio in settings.yml
Removed the job title from the default author bio.

--- a/TRMNL/src/settings.yml
+++ b/TRMNL/src/settings.yml
@@ -27,4 +27,4 @@ custom_fields:
   field_type: author_bio
   name: Author Bio
   description: Short support bio shown to end users
-  default: "Ivan Perez (taichikuji) - Cloud Engineer, currently Site Reliability Engineer"
+  default: "Ivan Perez (taichikuji)"
