--- a/TRMNL/src/settings.yml
+++ b/TRMNL/src/settings.yml
@@ -25,7 +25,7 @@ custom_fields:
   default: "Electricity"
 - keyname: author_bio
   field_type: author_bio
-  name: Author Bio
-  description: Short support bio shown to end users
+  name: About This Plugin
+  description: "Created by Ivan Perez. This plugin is for Dutch residents using Frank Energie who want to monitor real-time electricity and gas prices on their TRMNL device."
   category: "environment,finance"
-  default: "Ivan Perez (taichikuji)"
+  github_url: "https://github.com/taichikuji/trmnl-frank-energie-plugin"
