--- a/TRMNL/src/settings.yml
+++ b/TRMNL/src/settings.yml
@@ -32,4 +32,5 @@ custom_fields:
   name: About This Plugin
   description: "Created by Ivan Perez. This plugin is for Dutch residents using Frank Energie who want to monitor real-time electricity and gas prices on their TRMNL device."
   category: "environment,finance"
+  learn_more_url: "https://discordid.taichikuji.org/discord"
   github_url: "https://github.com/taichikuji/trmnl-frank-energie-plugin"
